add whatsapp message

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ body {
         <a href="tel:+919700989588">
           <img src="assets/SVG/accept-call-icon.svg" target="_blank" height="25" width="25"  alt="accept-call-icon">
          </a>
-        <a href="http://wa.me/9700989588">
+        <a href="http://wa.me/+919700989588?text=Hi%20Maverick!%0AWass%20up!">
           <img src="assets/SVG/whatsapp-color-icon.svg"target="_blank" height="25" width="25"  alt="whatsapp-color-icon">
         </a>
         <a href="mailto:amreshkanna1@gmail.com">
