updated few changes

--- a/index.html
+++ b/index.html
@@ -79,35 +79,35 @@ body {
       <div class="photo">
         <img src="assets/Profile-400x400.jpg"  alt="my photo">
       </div>
-     <h2>Amresh Kanna</h2>
+     <h2>Amresh Bandi</h2>
       <div class="details">
-        <a href="tel:+919700989588">
-          <img src="assets/SVG/accept-call-icon.svg" target="_blank" height="25" width="25"  alt="accept-call-icon">
+        <a href="tel:+919700989588" target="_blank">
+          <img src="assets/SVG/accept-call-icon.svg"  height="25" width="25"  alt="accept-call-icon">
          </a>
-        <a href="http://wa.me/+919700989588?text=Hi%20Maverick!%0AWass%20up!">
-          <img src="assets/SVG/whatsapp-color-icon.svg"target="_blank" height="25" width="25"  alt="whatsapp-color-icon">
+        <a href="http://wa.me/+919700989588?text=Hi%20Maverick!%0AWass%20up!" target="_blank">
+          <img src="assets/SVG/whatsapp-color-icon.svg" height="25" width="25"  alt="whatsapp-color-icon">
         </a>
-        <a href="mailto:amreshkanna1@gmail.com">
-          <img src="assets/SVG/gmail-icon.svg" target="_blank" height="25" width="25"  alt="gmail-icon">
+        <a href="mailto:amreshkanna1@gmail.com" target="_blank">
+          <img src="assets/SVG/gmail-icon.svg"  height="25" width="25"  alt="gmail-icon">
         </a>
-        <a href="https://www.amreshkanna.com">
-          <img src="assets/SVG/link-icon.svg" target="_blank" height="25" width="25"  alt="website">
+        <a href="https://www.amreshkanna.com" target="_blank">
+          <img src="assets/SVG/link-icon.svg"  height="25" width="25"  alt="website">
         </a>
-        <a href="https://github.com/Amreshkanna1">
-          <img src="assets/SVG/github-icon.svg" target="_blank" height="25" width="25"  alt="website">
+        <a href="https://github.com/Amreshkanna1" target="_blank">
+          <img src="assets/SVG/github-icon.svg"  height="25" width="25"  alt="website">
         </a>
       </div>
       <hr>
 <p>A sneak peak on social media accounts:</p>
       <div class="social-links">
-        <a href="https://www.linkedin.com/in/amreshkanna/">
-          <img src="assets/SVG/linkedin-app-icon.svg" target="_blank" height="25" width="25"  alt="linkedin">
+        <a href="https://www.linkedin.com/in/amreshkanna/" target="_blank">
+          <img src="assets/SVG/linkedin-app-icon.svg"  height="25" width="25"  alt="linkedin">
         </a>
-        <a href="https://www.instagram.com/ak_designs_01/">
-          <img src="assets/SVG/ig-instagram-icon.svg" target="_blank" height="25" width="25"  alt="instagram">
+        <a href="https://www.instagram.com/amresh_kanna/" target="_blank">
+          <img src="assets/SVG/ig-instagram-icon.svg"  height="25" width="25"  alt="instagram">
         </a>
-        <a href=" https://www.behance.net/amreshkanna">
-          <img src="assets/SVG/behance-square-color-icon.svg"  target="_blank" height="25" width="25"  alt="Behance">
+        <a href=" https://www.behance.net/amreshkanna" target="_blank">
+          <img src="assets/SVG/behance-square-color-icon.svg"   height="25" width="25"  alt="Behance">
         </a>
       </div>
       <div class="footer">
