--- a/index.html
+++ b/index.html
@@ -57,13 +57,19 @@
   display: flex;
   flex-flow: row;
   justify-content: center;
-  padding: 1vh 0;
+  padding: 1.2vh 0;
   gap: 30px;
+  align-items: center;
 }
-
+.info hr {
+  border: 0;
+  height: .3px;
+  background: cornflowerblue;
+}
 .footer p {
   font-size: .7em;
   font-weight: 100;
+  padding: 0;
 }
 /* animations */
 
@@ -99,8 +105,8 @@ body {
           <img src="assets/code.gif"  height="29" width="29"  alt="github">
         </a>
       </div>
-    
-<p>A sneak peak on network profiles</p>
+    <!-- <hr> -->
+<!-- <p>A sneak peak on network profiles</p> -->
       <div class="social-links">
         <a href="https://www.linkedin.com/in/amreshkanna/" target="_blank">
           <img src="assets/icons8-linkedin.svg"  height="30" width="30"  alt="linkedin">
@@ -113,7 +119,7 @@ body {
         </a>
       </div>
       <div class="footer">
-        <!-- <p>Designed by Amresh Kanna</p> -->
+        <p>Designed by Amresh Kanna</p> 
       </div>
     </div>
   </div>
